--- a/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Details.cshtml
@@ -8,6 +8,7 @@
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 
+    ViewBag.nav_style = "nav-sm";
 
 }
 
@@ -18,6 +19,7 @@
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/blue.css")" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap4-toggle/3.6.1/bootstrap4-toggle.min.css" integrity="sha512-EzrsULyNzUc4xnMaqTrB4EpGvudqpetxG/WNjCpG6ZyyAGxeB6OBF9o246+mwx3l/9Cn838iLIcrxpPHTiygAA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="~/Content/timeline.css" rel="stylesheet" />
     <style>
         .derecha {
@@ -118,57 +120,74 @@
                                     </div>
                                 </div>
 
-                                <div class="ln_solid"></div>
-                                <div class="form-group row">
-                                    <span style="color:black"><b>CLIENTE</b></span>
-                                </div>
+                                @if (Model.clienteClave.HasValue || !String.IsNullOrEmpty(Model.clienteOtro) || !String.IsNullOrEmpty(Model.clienteOtroDireccion))
+                                {
+                                    <div class="ln_solid"></div>
+                                    <div class="form-group row">
+                                        <span style="color:black"><b>CLIENTE</b></span>
+                                    </div>
 
-                                <div class="form-group row">
-                                    <!--Cliente Clave-->
-                                    @Html.LabelFor(model => model.clienteClave, new { @class = "control-label col-md-1" })
-                                    <div class="col-md-4">
-                                        @if (Model.clientes != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes.descripcion)" readonly>
-                                        }
-                                        else
-                                        {
+                                    <div class="form-group row">
+                                        <!--Cliente Clave-->
+                                        @Html.LabelFor(model => model.clienteClave, new { @class = "control-label col-md-1" })
+                                        <div class="col-md-4">
                                             <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clienteOtro)" readonly>
-                                        }
+                                        </div>
+                                        <!--Aplica otro?-->
+                                        @Html.LabelFor(model => model.aplicaClienteOtro, htmlAttributes: new { @class = "control-label col-md-1" })
+                                        <div class="col-md-1">
+                                            @Html.EditorFor(model => model.aplicaClienteOtro, new { htmlAttributes = new { @class = "check", @autocomplete = "off", @disabled = "@disabled" } })
+                                        </div>
                                     </div>
-                                    <!--Aplica otro?-->
-                                    @Html.LabelFor(model => model.aplicaClienteOtro, htmlAttributes: new { @class = "control-label col-md-1" })
-                                    <div class="col-md-1">
-                                        @Html.EditorFor(model => model.aplicaClienteOtro, new { htmlAttributes = new { @class = "check", @autocomplete = "off", @disabled = "@disabled" } })
-                                    </div>
-                                </div>
 
-                                <div class="form-group row">
-                                    <!--Cliente Otro-->
-                                    @Html.LabelFor(model => model.clienteOtro, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
-                                    <div class="col-md-4">
-                                        @if (Model.clientes != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes.descripcion)" readonly>
-                                        }
-                                        else
-                                        {
+                                    <div class="form-group row">
+                                        <!--Cliente Otro-->
+                                        @Html.LabelFor(model => model.clienteOtro, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
+                                        <div class="col-md-4">
                                             <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clienteOtro)" readonly>
-                                        }
-                                    </div>
-                                    <!--Cliente Otro Dirección-->
-                                    @Html.LabelFor(model => model.clienteOtroDireccion, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
-                                    <div class="col-md-6">
-                                        @if (Model.clientes != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes.direccion)" readonly>
-                                        }
-                                        else
-                                        {
+                                        </div>
+                                        <!--Cliente Otro Dirección-->
+                                        @Html.LabelFor(model => model.clienteOtroDireccion, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
+                                        <div class="col-md-6">
                                             <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clienteOtroDireccion)" readonly>
-                                        }
+                                        </div>
                                     </div>
-                                </div>
+                                }
+                                else if (Model.proveedorClave.HasValue || !String.IsNullOrEmpty(Model.proveedorOtro) || !String.IsNullOrEmpty(Model.proveedorOtroDireccion))
+                                {
+                                    <div class="ln_solid"></div>
+                                    <div class="form-group row">
+                                        <span style="color:black"><b>PROVEEDOR</b></span>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <!--proveedor Clave-->
+                                        @Html.LabelFor(model => model.proveedorClave, new { @class = "control-label col-md-1" })
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.proveedorOtro)" readonly>
+                                        </div>
+                                        <!--Aplica otro?-->
+                                        @Html.LabelFor(model => model.aplicaProveedorOtro, htmlAttributes: new { @class = "control-label col-md-1" })
+                                        <div class="col-md-1">
+                                            @Html.EditorFor(model => model.aplicaProveedorOtro, new { htmlAttributes = new { @class = "check", @autocomplete = "off", @disabled = "@disabled" } })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <!--proveedor Otro-->
+                                        @Html.LabelFor(model => model.clienteOtro, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.proveedorOtro)" readonly>
+                                        </div>
+                                        <!--proveedor Otro Dirección-->
+                                        @Html.LabelFor(model => model.clienteOtroDireccion, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.proveedorOtroDireccion)" readonly>
+                                        </div>
+                                    </div>
+                                }
+
+
 
                                 <div class="ln_solid"></div>
                                 <div class="form-group row">
@@ -177,16 +196,9 @@
 
                                 <div class="form-group row">
                                     <!--Enviado A Clave-->
-                                    @Html.LabelFor(model => model.enviadoAClave, new { @class = "control-label col-md-1" })
+                                    <label class="control-label col-md-1">Enviado A:</label>
                                     <div class="col-md-4">
-                                        @if (Model.clientes1 != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes1.descripcion)" readonly>
-                                        }
-                                        else
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtro)" readonly>
-                                        }
+                                        <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtro)" readonly>
                                     </div>
                                     <!--Aplica otro?-->
                                     @Html.LabelFor(model => model.aplicaEnviadoOtro, htmlAttributes: new { @class = "control-label col-md-1" })
@@ -199,26 +211,12 @@
                                     <!--Enviado a Otro-->
                                     @Html.LabelFor(model => model.enviadoAOtro, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
                                     <div class="col-md-4">
-                                        @if (Model.clientes1 != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes1.descripcion)" readonly>
-                                        }
-                                        else
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtro)" readonly>
-                                        }
+                                        <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtro)" readonly>
                                     </div>
                                     <!--Enviado A Otro Dirección-->
                                     @Html.LabelFor(model => model.enviadoAOtroDireccion, htmlAttributes: new { @class = "control-label col-md-1 control-label col-md-1 float-right" })
                                     <div class="col-md-6">
-                                        @if (Model.clientes1 != null)
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.clientes1.direccion)" readonly>
-                                        }
-                                        else
-                                        {
-                                            <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtroDireccion)" readonly>
-                                        }
+                                        <input type="text" class="form-control" value="@Html.DisplayFor(model => model.enviadoAOtroDireccion)" readonly>
                                     </div>
                                 </div>
 
@@ -393,7 +391,7 @@
                         </div>
 
                         <div class="ln_solid"></div>
-                                  
+
                         <div class="item form-group">
                             <div class="col-md-2 col-sm-2">
                                 @if (Model.ultimoEstatus != (int)Bitacoras.Util.RM_estatus_enum.Regulariza && Model.ultimoEstatus != (int)Bitacoras.Util.RM_estatus_enum.Cancelada)
@@ -410,7 +408,7 @@
                                         <i class="fa-solid fa-print"></i> Imprimir
                                     </a>
                                 }
-                                
+
                             </div>
 
                         </div>
@@ -440,6 +438,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.3/sweetalert2.all.min.js" integrity="sha512-/iBgV43zPirSC0tue+PT/1VHGs7En24twBmT+sVMgn9PTaOpKfbgIyL5YsGKlbAIxcwz9S8W/YEnYjpIYj2Axw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- toggle -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap4-toggle/3.6.1/bootstrap4-toggle.min.js" integrity="sha512-bAjB1exAvX02w2izu+Oy4J96kEr1WOkG6nRRlCtOSQ0XujDtmAstq5ytbeIxZKuT9G+KzBmNq5d23D6bkGo8Kg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery-iu/jquery-ui.min.js"))
     <script src="~/Scripts/Forms/RemisionesManuales.js?date=@DateTime.Now"></script>
     <script>
 
