--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Index.cshtml
@@ -65,9 +65,9 @@
                                 <div class="card-box">
                                     <div class="form-group">
 
-                                        <a onclick="mostrarModalDemo()" class="btn btn-success" style="color:white">
+                                        <a href="@Url.Action("create", ViewBag.ControllerName)" class="btn btn-success" style="color:white">
                                             <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
+                                            Crear Nueva Solicitud
                                         </a>
 
                                     </div>
@@ -75,6 +75,9 @@
                                     <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id)
+                                                </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.descripcion)
                                                 </th>
@@ -102,7 +105,7 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.SCDM_cat_tipo_solicitud.descripcion)
                                                 </th>
-                                                <th></th>
+                                                <th>Acciones</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -110,13 +113,16 @@
                                             {
                                                 <tr>
                                                     <td>
+                                                        @Html.DisplayFor(modelItem => item.id)
+                                                    </td>
+                                                    <td>
                                                         @Html.DisplayFor(modelItem => item.descripcion)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.justificacion)
                                                     </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.fecha_creacion)
+                                                    <td nowrap>
+                                                        @item.fecha_creacion
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.on_hold)
@@ -137,13 +143,15 @@
                                                         @Html.DisplayFor(modelItem => item.SCDM_cat_tipo_solicitud.descripcion)
                                                     </td>
                                                     <td>
-                                                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                                        <a href="@Url.Action("EditarSolicitud", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="top" title="Editar">
+                                                            <i class="fa-regular fa-pen-to-square"></i>
+                                                        </a>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btn-sm" data-toggle="tooltip" data-placement="top" title="Editar">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </a>
                                                     </td>
                                                 </tr>
                                             }
-
                                         </tbody>
                                     </table>
 
