2023-08-10 Se agrega cliente a reporte de produccion.

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
@@ -223,6 +223,9 @@
                                                         @Html.DisplayNameFor(model => model.Número_de_Parte__de_cliente)
                                                     </th>
                                                     <th>
+                                                        @Html.DisplayNameFor(model => model.ConcatCliente)
+                                                    </th>
+                                                    <th>
                                                         @Html.DisplayNameFor(model => model.SAP_Rollo)
                                                     </th>
                                                     <th>
@@ -380,6 +383,9 @@
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.Número_de_Parte__de_cliente)
+                                                    </td>
+                                                      <td>
+                                                        @Html.DisplayFor(modelItem => item.ConcatCliente)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.SAP_Rollo)
